Cambiando metodo getCucumberJsonContentAsString para que trabaje con Java 8